[package]
name = "rabbit_tls"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4"
simple_logger = "1.13.0"
log = "0.4"
native-tls = "0.2"
# amiquip impl IoStream for version 0.6 only!
mio = "0.6"